# bot

./: .env.example  .gitignore  Cargo.toml  README.md  dockerfile
.github/workflows/: deploy.yml
src/: bot.rs  config.rs  context.rs  main.rs  model.rs
src/api/: common.rs  mod.rs
src/handler/: mod.rs
src/infra/: error_status.rs  mod.rs  model.rs
src/models/: task.rs
src/types/: common.rs  mod.rs
