[package]
name = "bot"
version = "0.1.0"
edition = "2021"
authors = ["aircjm <aircjm@gmail.com>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/aircjm/bot"
homepage = "https://github.com/aircjm/bot"
description = "机器人助手"


[dependencies]
axum = "0.3"
tokio = { version="1", features = ["full"] }
serde = { version="1", features = ["derive"] }
dotenv = "0.15"
config = "0.11"
tracing = "0.1"
tracing-subscriber = "0.2"
reqwest = "0.11"
serde_json = "1"
rusty-rescuetime = "0.1.0"