[package]
name = "bot"
version = "0.1.0"
edition = "2021"
authors = ["aircjm <aircjm@gmail.com>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/aircjm/bot"
homepage = "https://github.com/aircjm/bot"
description = "机器人助手"


[dependencies]
axum = "0.6"
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1.0", features = ["full"] }
tower = { version = "0.4", features = ["util", "timeout"] }
tower-http = { version = "0.4.0", features = ["add-extension", "trace"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
uuid = { version = "1.0", features = ["serde", "v4"] }
dotenv = "0.15"
config = "0.11"
reqwest = "0.11"
serde_json = "1.0.94"
rusty-rescuetime = "0.1.0"